@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompile.c,v 1.49.2.48 2008/01/23 21:21:39 dgp Exp $
+ * RCS: @(#) $Id: tclCompile.c,v 1.49.2.49 2008/05/16 15:05:32 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -3337,7 +3337,7 @@ TclPrintSource(
 
     TclNewObj(bufferObj);
     PrintSourceToObj(bufferObj, stringPtr, maxChars);
-    fprintf(outFile, TclGetString(bufferObj));
+    fprintf(outFile, "%s", TclGetString(bufferObj));
     Tcl_DecrRefCount(bufferObj);
 }
 #endif /* TCL_COMPILE_DEBUG */
