@@ -1,3 +1,13 @@
+2008-05-16  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclCompile.c: fix crash with tcl_traceExec. Found and
+	fixed by Alexander Pasadyn [Bug 1964803]. 
+
+2008-05-15  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/makefile.vc: We should use the thread allocator for threaded
+	* win/rules.vc:    builds. Added 'tclalloc' option to disable.
+
 2008-05-09  George Peter Staplin  <georgeps@xmission.com>
 	* tools/tsdPerf.c 	A loadable Tcl extension for testing TSD
 	performance.
